# typetree_unity

./: .flake8  .gitignore  .gitmodules  MANIFEST.in  README.md  cli.py  logger.py  requirements.txt  setup.cfg  typetreegen.py  validators.py
.github/workflows/: lint.yml  pylint.yml
TypeTreeGenerator/: TypeTreeGenerator.runtimeconfig.json
TypeTreeGeneratorPy/: __init__.py  generator.py
typetree_unity/: __init__.py  __main__.py  assembly_loader.py  exporter.py  generator.py
typetree_unity/clr/: __init__.py  assembly_loader.py  generator.py
