[metadata]
name = TypeTreeGeneratorPy
version = attr: TypeTreeGeneratorPy.__version__
url = https://github.com/jrobinson3k1/TypeTreeGeneratorPy
description = Type tree generation from Unity assemblies
long_description = file: README.md, LICENSE
keywords = python, data-mining, unity, python-3, pythonnet
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
install_requires =
    pythonnet >= 3.0.0a1
