[metadata]
name = typetree_unity
version = attr: typetree_unity.__version__
url = https://github.com/jrobinson3k1/typetree_unity
description = Type tree generator from Unity assemblies
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = python, data-mining, unity, python-3, pythonnet
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
install_requires =
    pythonnet >= 3.0.0a1
